css/theme-aspirin.css
/* ... */
.double-bounce1,
.double-bounce2 {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: #eb7f00;
  opacity: 0.6;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-animation: bounce 2s infinite ease-in-out;
  animation: bounce 2s infinite ease-in-out;
}
.double-bounce2 {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}
@-webkit-keyframes bounce {
  0%,
  100% {
    -webkit-transform: scale(0);
  }
  50% {
    -webkit-transform: scale(1);
  }
}
@keyframes bounce {
  0%,
  100% {
    transform: scale(0);
    -webkit-transform: scale(0);
  }
  50% {
    transform: scale(1);
    -webkit-transform: scale(1);
  }
}
section {
  padding-top: 80px;
  padding-bottom: 80px;
  position: relative;
  overflow: hidden;
}
section.pad-large {
  padding-top: 160px;
  padding-bottom: 160px;
}
section.duplicatable-content {
  padding-bottom: 40px;
}
section:nth-of-type(odd) {
  background: #f4f4f4;
}
section:nth-of-type(even) {
  background: #ffffff;
}
.no-pad {
  padding: 0px;
}
.no-pad-top {
  padding-top: 0px !important;
}
.no-pad-left {
  padding-left: 0px;
}
.no-pad-right {
  padding-right: 0px;
}
.no-pad-bottom {
  padding-bottom: 0px;
}
.space-top-small {
  margin-top: 20px !important;
}
.space-bottom-medium {
  margin-bottom: 40px !important;
}
.space-bottom-large {
  margin-bottom: 80px !important;
}
.space-bottom-xlarge {
  margin-bottom: 160px !important;
}
.no-margin {
  margin: 0;
}
.no-margin-bottom {
  margin-bottom: 0px !important;
}
.btn {
  background: none;
  -webkit-transition: all .3s ease;
  -moz-transition: all .3s ease;
  transition: all .3s ease;
  min-width: 155px;
}
.btn:hover {
  background: none;
  color: #fff;
  border-color: #eb7f00;
  background-color: #eb7f00;
}
.btn-primary {
  border-radius: 25px;
  display: inline-block;
  padding: 14px 28px 13px 28px;
  line-height: 1;
  border: 2px solid #eb7f00;
  font-family: "Raleway", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
  font-size: 11px;
  text-transform: uppercase;
  letter-spacing: 1px;
  color: #eb7f00;
}
.btn-primary.btn-filled {
  background: #eb7f00;
  color: #fff;
}
.btn-white {
  border-color: #fff;
  color: #fff;
}
.btn-white:hover {
  background: #fff;
  color: #333333;
  border-color: #fff;
}
.btn-white.btn-filled {
  background: #fff;
  color: #eb7f00;
}
.btn-grey {
  border-color: #777777;
  color: #333333;
}
.btn-grey:hover {
  background-color: #333333;
  color: #fff;
  border-color: #333333;
}
.btn-lg {
  padding: 18px 40px;
}
.btn-sm {
  padding: 10px 28px;
  font-size: 11px;
}
.btn-xs {
  padding: 8px 24px;
  font-size: 10px;
}
.btn-text-only {
  border-color: rgba(0, 0, 0, 0);
}
.btn-text-only:hover {
  background: none;
  color: #eb7f00;
  border-color: rgba(0, 0, 0, 0);
}
.link-text {
  font-family: "Raleway", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
  font-size: 11px;
  text-transform: uppercase;
  letter-spacing: 1px;
  border-bottom: 2px solid #eb7f00;
  display: inline-block;
  padding-bottom: 0px;
  color: #eb7f00;
}
nav hr {
  border: none;
  border-top: 1px solid rgba(255, 255, 255, 0.3);
  position: relative;
  bottom: 2px;
}
.has-dropdown {
  bottom: 3px;
}
.has-dropdown:after {
  font-family: ElegantIcons;
  speak: none;
  font-style: normal;
  font-weight: 400;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  content: "\33";
  color: #777777;
}
.mobile-toggle {
  display: none;
}
.top-bar {
  position: absolute;
  background: #fff;
  width: 100%;
  z-index: 10;
  -webkit-transition: all .5s ease;
  -moz-transition: all .5s ease;
  transition: all .5s ease;
  line-height: 0;
  top: 0;
}
.nav {
  padding-top: 30px;
}
.logotype {
  padding-bottom: 60px;
  max-width: 250px;
}
.top-bar .logo {
  max-width: 300px;
  position: relative;
  bottom: 7px;
}
.logo.logo-wide {
  max-width: 300px;
  bottom: 12px;
  margin-bottom: -6px;
}
.logo.logo-square {
  max-width: 100px;
  max-height: 60px;
  bottom: 20px;
  margin-bottom: -20px;
}
.nav-sticky .logo-wide {
  bottom: 12px !important;
}
.nav-sticky .logo-square {
  bottom: 20px !important;
}
.nav-menu {
  padding-top: 80px;
}
.nav-menu .social-icons {
  float: right;
}
.utility-menu {
  margin-top: 16px;
}
.utility-menu .utility-inner {
  padding-bottom: 16px;
}
.utility-menu .btn {
  min-width: 60px;
  padding-left: 18px;
  padding-right: 18px;
  margin-left: 8px;
  margin-right: 0px;
}
.utility-menu span {
  display: inline-block;
  position: relative;
  top: 9px;
}
.utility-menu .btn-text-only {
  min-width: 0px;
  padding: 0px 8px;
}
.overlay-bar {
  background: none;
}
.overlay-bar .has-dropdown:after {
  color: #fff;
}
.menu {
  padding: 0;
  margin: 0;
  display: inline-block;
  position: relative;
  top: 2px;
}
.menu li {
  float: left;
  margin-right: 56px;
  position: relative;
}
.menu li:last-child {
  margin-right: 0px;
}
.menu li a {
  font-family: "Raleway", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
  font-size: 11px;
  text-transform: uppercase;
  letter-spacing: 1px;
  color: #777777;
  -webkit-transition: all .5s ease;
  -moz-transition: all .5s ease;
  transition: all .5s ease;
  padding-bottom: 40px;
  display: inline-block;
  line-height: 14px;
}
.menu li a:hover {
  color: #333333;
}
@media all and (max-width: 1050px) {
  .menu li {
    margin-right: 32px;
  }
}
.top-bar .social-icons li a {
  font-size: 16px;
}
.top-bar .logo-light {
  display: none;
}
.top-bar .utility-menu .utility-inner {
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
}
.overlay-bar .menu li a {
  color: #fff;
}
.overlay-bar .menu li a:hover {
  color: #fff;
}
.overlay-bar .social-icons li a {
  color: #fff;
}
.overlay-bar .subnav li a {
  color: #777777;
}
.overlay-bar .subnav li a:hover {
  color: #333333;
}
.overlay-bar .logo-dark {
  display: none;
}
.overlay-bar .logo-light {
  display: block;
}
.overlay-bar .utility-menu span {
  color: #fff;
}
/* ... */

